# two-link-manipulator

./: CMakeLists.txt  README.md  package.xml
config/: joints.yaml
control/: set_position.py
launch/: config.rviz  controllers.launch  gazebo.launch  rviz.launch
urdf/: two_link_manipulator.xacro
world/: scene.world
