<?xml version="1.0"?>
<package format="2">
    <name>two-link-manipulator</name>
    <version>0.0.0</version>
    <description>The two-link-manipulator package</description>
    <maintainer email="leo@todo.todo">leo</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <depend>gazebo_ros</depend>
    <export>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
        <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
    </export>
</package>
